fix spacing bottom in single item page of collection

--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -313,6 +313,7 @@
                 content: "";
             }
             &.single-item-collection{
+                min-height: 23.5vh;
                 .single-item-collection--document{
                     font : {
                         size: 0.875rem;
